Revised article. Decided to split into two pieces

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 			<br>
 			
 			<h3>WHAT IS AN ARTIFICIAL NEURAL NETWORK? </h3>
-			<p>At its most basic level, an artificial neural network is a mathematical equation. And, surprisingly, artificial neural networks rely on simple mathematics; typically, artificial neural networks only perform addition, subtraction, multiplication, and exponentiation. In fact, you can easily replicate the same calculations with a simple calculator and these four buttons:   +   -   x   exp()</p>  
+			<p>At its most basic level, an artificial neural network is a mathematical equation. And, surprisingly, many artificial neural networks rely on simple mathematics: addition, subtraction, multiplication, and exponentiation. In fact, you can easily perform the same calculations with a calculator and these four buttons:   +   -   x   exp()</p>  
 			<p>What makes neural networks so special is in the way the calculations are performed. When these operations are combined in the right order, we can get computer to recognize your voice - we just need a fast computer and a data set (preferably, a large one).</p>
 			<br>
 
@@ -101,19 +101,19 @@
 			
 			<h3>MAKING PREDICTIONS WITH A NEURAL NETWORK</h3>
 			<p>Right now, we could take out a calculator and start making predictions using the example neural network. All we need is our patient's temperature, heart rate, and the w values. Then, we would plug those values into the equation above. And, voila! Out comes our prediction of whether our patient is sick or not. </p>
-			<p>However, there's a catch. For the network to be useful, we need the predictions to be accurate, and the key to making accurate predictions is finding the best values for the w terms in the equation. You can think of these w's like settings - when we change the settings, we change the network equation. And when the network equation changes, our predictions can get better or worse.</p>
+			<p>However, there's a catch. For the network to be useful, we need the predictions to be accurate, and the key to making accurate predictions is finding the best values for the w terms in the equation. You can think of these w's like settings - when we change the settings, we change the network equation, which makes our predictions better or worse.</p>
 			<div id='ANN_Equation_ws'>
 				<p>\[ \Large{ S_{pred} = \frac{1}{1+e^{ - \left(\frac{\color{red} w_{\color{red} 5} }{1 + e^{-\left(T\cdot \color{red} w_{\color{red} 1}+ {HR}\cdot  \color{red} w_{\color{red} 2} \right)}} +\frac{\color{red} w_{\color{red} 6}}{1 + e^{-\left(T\cdot \color{red} w_{\color{red} 3}+ {HR}\cdot \color{red} w_{\color{red} 4} \right)}} \right) } }  }  \] </p>
 			</div>
-			<p>Ultimately, if we get the settings right, we can get our neural network to recognize sick patients! That's exactly the same way that Alexa can recognize your voice – in her neural network she has found the right settings to make her predictions really good. But unlike our example, Alexa most likely has hundreds or thousands of w settings in total, compared to our robot's six (w1, w2, w3, w4, w5, and w6).</p>
+			<p>If we get the settings right, we can get our neural network to recognize sick patients! That's exactly the same way that Alexa can recognize your voice – in her neural network she has found the right settings to make her predictions really good. But unlike our example, Alexa most likely has hundreds or thousands of w settings in total, compared to our robot, which has only six (w1, w2, w3, w4, w5, and w6).</p>
 			<br>
 			
 			<h3>TRAINING A NEURAL NETWORK TO MAKE BETTER PREDICTIONS</h3>
-			<p>The real challenge of a neural network is to learn the w settings that make the predictions as good as possible. This process of learning the best settings is called "training". Unfortunately, when we are just starting out, we have no idea what the settings should be. Our best option is to start by guessing values for the ws. </p>
-			<p>In this example, we will start by guessing that every setting is equal to 1 (w1 = w2 = w3 = w4 = w5 = w6 = 1).</p>
+			<p>The real challenge of a neural network is to learn the best w settings that make the predictions as good as possible. This process is called "training". Unfortunately, when we are just starting out, we have no idea what the settings should be. Our best option is to start by guessing values for the ws. </p>
+			<p>In this example, we will start by guessing that every w setting is equal to 1 (w1 = w2 = w3 = w4 = w5 = w6 = 1).</p>
 			
 			<h4>Collecting data to train the network</h4>
-			<p>The training process requires some data - which we need to collect or find in a database.</p>
+			<p>To train the robot, we need some data - which we need to collect or find in a database.</p>
 			<p>In our robot example, we will hire a doctor. The doctor will examine 10 patients, measuring their heart rate (HR), temperature (T), and whether they were sick or not (S).</p>
 			<div id='DoctorDiv'>
 				<p><strong>[Click the doctor to collect data from each patient!]</strong></p>
@@ -122,34 +122,45 @@
 			</div>
 			
 			<h4>The network's first predictions</h4>
-			<p>Training a network is a trial-and-error process. Now that we have our data, we need to try out our equation and see if the w values work well. First, we will plug our w values into the equation (remember, to start we guessed that all ws = 1). Then, for each subject, we will plug in the subject's temperature, heart rate. Once this is done, we can calculate our predictions of whether the patient was sick or not.</p> 
+			<p>Training a network is a trial-and-error process. Now that we have our data, we need to do the "trial" part, using our equation to see if the w values work well.</p> 
+			<p>First, we will plug our w values into the equation (remember, to start we guessed that all ws = 1). Then, for each subject, we will plug in the subject's temperature, heart rate. Once this is done, we can calculate our predictions of whether the patient was sick or not.</p> 
 			<div id='RobotDoctorDiv'>
 				<p><strong>[Click the gears to read in patient data and predict if the patient is sick or not.]</strong></p>
 				<script src="./robotdoctor.js"></script>
 			</div>
 			<h4>Making better predictions</h4>
-			<p>The first predictions are awful, because we started off by guessing that all ws = 1. In fact, the network predictions were almost identical for all of the patients. This was the "trial" part of "trial and error".</p>
-			<p>After trying our equation, we correct for any errors the network made. This is the "error" part of the trial-and-error. At this stage, we update the w settings to make the errors a little bit smaller. And we repeat this process over and over. We can use many different rules to update our w values, but this is beyond the scope of this article. </p>
+			<p>The first predictions are awful, because we started off by guessing that all ws = 1. In fact, the network predictions were almost identical for all of the patients.</p>
+			<p>After trying our equation (the "trial" part), we correct for any errors the network made. This is the "error" part of the trial-and-error. At this stage, we update the w settings to make the errors a little bit smaller. And we repeat this process over and over. We can use many different rules to update our w values, but this is beyond the scope of this article. </p>
 			<p>To truly train an artificial neural network well, we change the settings many times: sometimes thousands of times, sometimes millions of times, and sometimes even more! And eventually, our network makes smaller and smaller errors as we update the settings.</p>
 			<div id='Error'>
 				<!-- <p>[Error decreasing over time]</p> -->
 			</div>
-
-			
+			<br>
+			<br>
+			<br>
+			<br>
 			<h3>THE CONNECTION BETWEEN ARTIFICIAL NEURAL NETWORKS AND BRAINS.</h3> 
-			<p>In real brains, brain cells communicate using electrical pulses. Real brain cells are great listeners because, first, they listen to signals other brain cells are sending them. Only after they listen do they decide to how to respond.</p> 
-			<p>Communication between real brain cells can lead to works of art, engineering marvels, and the full spectrum of human behaviors. Noticing how incredible abilities all arise from cells communicating with one another, Artificial neural networks try to imitate the way real brain cells communicate. 
-			<p>In particular, there are two behaviors that are explicitly programmed into an artificial neural network.</p>
+			<p>In the human brain, brain cells communicate using electrical pulses. This communication gives rise to the full spectrum of human behaviors: any time you're thinking, feeling, or moving, your brain cells are talking to one another. Ultimately, brain cells are the reason why we can create works of art, beautiful dances and engineering marvels.</p> 
+			<p>Clearly, brain cells can do some pretty amazing things. So why not try to imitate the way the brain works?</p>
+			<p>Artificial Neural Networks are exactly that - a simple attempt at programming a computer to work like a brain. </p>
+			
+			<h4>Simple guidelines for how brain cells work</h4> 
 
-			<p><strong>1) Threshold.</strong> 
-			In a real brain, each cell receives electrical signals from other brain cells. The total of all signals coming in to a cell is like an<strong>input</strong>.
-			<p>If a brain cell doesn't receive enough input, it will not send any electrical signals of its own. Essentially, there's a threshold effect - once the cell gets enough electrical input, it will respond. Below the threshold, nothing happens. Above the threshold value, more input leads to more output.</p>
+			<p>Artificial Neural Networks take a few key behaviors from brain cells and try to replicate those behaviors in a computer program. Specifically, there are three features that are explicitly programmed into an artificial neural network.</p>
+			
+			<p><strong>1) Good listener.</strong> 
+			When a real brain cell communicates with other brain cells, the first thing it does is listen.</p> 
+			<p>Before anything else, the cell listens to all the other cells communicating with it. Then, only after it has listened, the cell will decide to how to respond. Because the cell listens first and then responds, the total of all signals coming in to a cell can be thought of as an <strong>input</strong>.<p>
+			
+			<p><strong>2) Threshold.</strong> 
+			If a brain cell doesn't receive enough input, it will not send any electrical signals of its own. Essentially, there's a threshold effect - below the threshold, nothing happens. Above the threshold value, more input leads to more output.</p>
 			
 			<!-- <p>The figure below shows data from real neurons - it shows that once neurons get enough signals coming in, they start sending signals of their own.</p> -->
 			
 			<!-- <p>Beer RD (1990) Intelligence as Adaptive Behavior: An Experiment in Computational Neuroethology. San Diego: Acadmic Press, Inc.</p> -->
 
-			<p><strong>2) Selective listening.</strong> Normally, brain cells receive electrical signals from many other cells. However, not all signals are equal; each brain cell listens more to some cells than others. 
+			<p><strong>3) Selective listening.</strong> 
+			Not all input signals are equal; signals from some brain cells count than others. 
 			<p>Just like advice from a trusted friend may count more than advice from a reckless friend, signals from some neurons count more than signals from other neurons. For example, some signals could be worth 3x more than others. And some signals could be worth nothing at all.</p>
 			<p>Click the example below to see how the neural network equation imitates biological brains.</p>
 			<div id='EquationExplode'>
